# ogre-game

./: .gitignore  CMakeLists.txt  README.md  main.cpp  plugins.cfg  resources.cfg  sourceFiles.cmake
media/assets/asteroids/: asteroid1.fbx  asteroid10.fbx  asteroid2.fbx  asteroid3.fbx  asteroid4.fbx  asteroid5.fbx  asteroid6.fbx  asteroid7.fbx  asteroid8.fbx  asteroid9.fbx
media/assets/earth/: earth.fbx
media/assets/starships/starship2/: starship.fbx
media/assets/starships/starship3/source/: p_103_spaceship_001.blend
media/assets/starships/starship5/: starship.fbx
media/base_shapes/: cylinder.fbx
media/materials/: asteroid.material  base.material  skybox.material  star-fighter.material  starship.material
media/scripts/: asteroid.material  bullet.material  earth.material  fonts.fontdef  star-fighter.material  starship.material  ui.material  ui.overlay
src/: main.cpp
src/core/: collider_drawer.cpp  collider_drawer.hpp  custom_scene_manager.hpp  custom_scene_node.cpp  custom_scene_node.hpp  event.hpp  game.cpp  game.hpp  game_event_listener.cpp  game_event_listener.hpp  game_loop_thread.cpp  game_loop_thread.hpp  input.cpp  input.hpp  physics_world.cpp  physics_world.hpp  scene.cpp  scene.hpp  ui_manager.cpp  ui_manager.hpp  utils.hpp  window_listener.cpp  window_listener.hpp  window_manager.cpp  window_manager.hpp
src/core/network/: client.cpp  client.hpp  lan_listener.cpp  lan_listener.hpp  lan_scanner.cpp  lan_scanner.hpp  network_base.cpp  network_base.hpp  network_manager.cpp  network_manager.hpp  server.cpp  server.hpp  server_info.hpp
src/core/network_layer/: client.cpp  client.hpp  const.hpp  lan_listener.cpp  lan_listener.hpp  lan_scanner.cpp  lan_scanner.hpp  network_layer.cpp  network_layer.hpp  network_layer_manager.cpp  network_layer_manager.hpp  server.cpp  server.hpp
src/core/objects/: base_movable_object.cpp  base_movable_object.hpp  collider.cpp  collider.hpp  free_character_controller.cpp  free_character_controller.hpp  state.cpp  state.hpp  transform.cpp  transform.hpp  transform_state.cpp
src/core/objects/state/: state.cpp  state.hpp  transform_state.cpp  transform_state.hpp
src/core/physics/: collider_drawer.cpp  physics_world.cpp  physics_world.hpp  tools.cpp  tools.hpp
src/core/scene/: custom_scene_manager.cpp  custom_scene_manager.hpp  custom_scene_node.cpp  custom_scene_node.hpp  scene.cpp  scene.hpp
src/game/: galactic_wars_game.cpp  galactic_wars_game.hpp
src/game/objects/: star_fighter_controller.cpp  star_fighter_controller.hpp  starship.cpp  starship.hpp
src/game/objects/star_fighters/: base.cpp  base.hpp  fighter.cpp  fighter.hpp
src/game/scenes/: demo_scene.cpp  demo_scene.hpp  menu_scene.cpp  menu_scene.hpp  space_scene.cpp  space_scene.hpp
src/game/scenes/space_scene/: environment.cpp  environment.hpp  loop.hpp  scene.cpp  scene.hpp
src/game/ui/: Tray_Listener.h  fighter_indicators.cpp  fighter_indicators.hpp  lan_host_menu.cpp  lan_host_menu.hpp  lan_menu.cpp  lan_menu.hpp  lan_peer_menu.cpp  lan_peer_menu.hpp  main_menu.cpp  main_menu.hpp  ui_listener.cpp  ui_listener.hpp  ui_manager.cpp  ui_manager.hpp
src/ui/: Tray_Listener.cpp  UI_Manager.cpp  lan_menu.h  main_menu.cpp  main_menu.h
